<resources>
    <string-array name="food_categories">
        <item>Pizza</item>
        <item>Shawarma</item>
        <item>Crepe</item>
        <item>Desserts</item>
        <item>Refreshments</item>
    </string-array>
    <string name="app_name">Delivery</string>
    <string name="total_price">$%1$s</string>
    <string name="main_label">Find Out The \nDrinks you Love</string>
    <string name="favorite_empty_state_first_text">Your favorite list is empty!\n add products to the list\n by pressing the</string>
    <string name="favorite_empty_state_second_text">Button in any product screen</string>
    <string name="delete_fav_product_dialog_title">Delete Product</string>
    <string name="delete_fav_product_dialog_positive_button_label">Confirm</string>
    <string name="delete_fav_product_dialog_negative_button_label">No</string>
    <string name="delete_fav_product_dialog_message">Are you sure you want to delete the product from your favorite list?</string>
    <string name="alerter_added_cart_title">Added to cart</string>
    <string name="checkout_label">Proceed to checkout</string>
    <string name="cart_text_label">Cart</string>
    <string name="cart_total_label">Total:</string>
    <string name="cart_total_text">$%1$s</string>
    <string name="home_label">Home</string>
    <string name="favorite_label">Favorite</string>
    <string name="profile_label">Profile</string>
    <string name="grid_label">Grid</string>
    <string name="nav_main_item_group_label">Food Delivery</string>
    <string name="nav_other_item_group_label">Other</string>
    <string name="about_food_delivery_menu_label">About Food Delivery</string>
    <string name="order_summary_label">Order Summary</string>
    <string name="delivery_txt_input_name_hint">Name</string>
    <string name="delivery_txt_input_address_hint">Delivery Address</string>
    <string name="you_pay_label">You Pay:</string>
    <string name="for_label">For:</string>
    <string name="delivery_details_label">Delivery Details:</string>
    <string name="payment_options_label">Pay with:</string>
    <string name="cash_label">Cash</string>
    <string name="credit_card_label">Credit Card</string>
    <string name="order_button_label">Order</string>
    <string name="select_category_search_filter_title">Select Category:</string>
    <string name="select_category_search_filter_button_label">Confirm</string>
    <string name="add_to_cart_label">Add to Cart</string>
    <string name="client">clientid</string>
    <string name="order_submit_success_message">Order submitted successfully</string>
    <string name="order_submit_success_title">Success!</string>
    <string name="order_submit_success_button">Great</string>
    <string name="auth_success">Authentication success! / getting your order ready</string>
    <string name="auth_failed">Authentication failure!</string>
    <string name="auth_required_dialog_title">Authentication Required</string>
    <string name="auth_required_dialog_message">In order to proceed with your delivery you should register</string>
    <string name="auth_required_dialog_positive_button">Ok</string>
    <string name="auth_required_dialog_negative_button">Never mind</string>
    <string name="delivery_txt_input_phone_hint">Phone Number</string>
    <string name="inputs_empty_alerter_title">Inputs Are Empty</string>
    <string name="inputs_empty_alerter_msg">In order to proceed with your order, you have to provide the necessary information</string>
    <string name="user_orders_label">Your Orders</string>
</resources>