<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/nav_main_item_group_label">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_home"
                    android:enabled="true"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home_label"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/action_favorites"
                    android:enabled="true"
                    android:icon="@drawable/ic_favorite"
                    android:title="@string/favorite_label"
                    app:showAsAction="ifRoom" />

                <item
                    android:id="@+id/action_empty"
                    android:enabled="false"
                    android:title=""
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_person"
                    android:enabled="true"
                    android:icon="@drawable/ic_person"
                    android:title="@string/profile_label"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_grid"
                    android:enabled="true"
                    android:icon="@drawable/ic_grid"
                    android:title="@string/grid_label"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>
    <item android:title="@string/nav_other_item_group_label">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/aboutMenuItem"
                    android:icon="@drawable/ic_information"
                    android:title="@string/about_food_delivery_menu_label" />
            </group>
        </menu>
    </item>
</menu>