<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_empty"
        android:enabled="false"
        android:title=""
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_person"
        android:enabled="true"
        android:icon="@drawable/ic_person"
        android:title="@string/profile_label"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_grid"
        android:enabled="true"
        android:icon="@drawable/ic_grid"
        android:title="@string/grid_label"
        app:showAsAction="ifRoom" />
</menu>